Fixed img height to auto on mobile for articles

--- a/exercise-science-myth.scss
+++ b/exercise-science-myth.scss
@@ -328,6 +328,7 @@ nav{
                     width: 30vw;
                     background-repeat: no-repeat;
                     margin: 4.8% 0% 0% 0%;
+                    height: auto;
                 }
 
             }
